syntax = "proto3";

package helloMsgpb;

option go_package = "../helloMsgpb";

// The HelloMsgHandle service definition.
service HelloMsgHandle {
  // Handles a received HelloMsg message
  rpc HelloMsgReceive (HelloMsg) returns (HelloMsgResponse) {}
}

// The request message containing the user's name.
message HelloMsg {
  string helloMsg = 1;
}

message HelloMsgResponse {}